# notetaker

./: .env.gcp.example  .gitignore  AUTHENTICATION_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  DEPLOYMENT_SUMMARY.md  Makefile  PRESIGNED_URL_SUMMARY.md  QUICK_START.md  TIMESTAMP_FEATURES_COMPLETE.md
backend/: .gitignore  AUTH_SETUP.md  DEV_SETUP.md  Dockerfile  Dockerfile.worker  MODEL_CONFIG.md  Makefile  QUICKSTART.md  README.md  README_UPDATED.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  setup_dev.sh  test_api.sh  test_concurrent.py
backend/alembic/: env.py
backend/alembic/versions/: 03ea02614a53_add_uploading_status.py  (+12 more)
backend/app/: config.py  database.py  main.py  models.py  schemas.py  worker.py
backend/app/api/: collections.py  (+1 more)
backend/claudedocs/: implementation_summary.md  timestamp_features.md
backend/jobs/: cleanup_database.py
backend/outputs/: transcript_ISOHH-M3 CF3.mp4.txt  transcript_ISOHH-M3.Somatic Psychology.mp4.txt
backend/plans/: dual_player_implementation_complete.md  gpu_acceleration_implementation.md  hls_implementation_complete.md  hls_streaming_implementation.md  research_tasks_run.md  video_compression_implementation.md  video_streaming.md
backend/scripts/: README.md  assign_existing_data_to_user.py  cleanup_production_db.py  cleanup_r2_bucket.py  cleanup_r2_bucket_streaming.py  create_test_user.py  reset_database.py  run_all_audio_tests.sh  test_audio_cleanup.py  test_audio_extraction.py  test_audio_size.py  test_chunked_transcription.py  test_r2_connection.py  test_transcription.py  test_transcription_dry_run.py
(+76 files in other folders)
