[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "boto3>=1.34.0",
    "fastapi>=0.121.1",
    "google-cloud-tasks>=2.16.0",
    "google-cloud-secret-manager>=2.20.0",
    "greenlet>=3.1.1",
    "httpx>=0.28.1",
    "litellm>=1.79.3",
    "loguru>=0.7.3",
    "openai>=2.7.2",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pyjwt[crypto]>=2.8.0",  # crypto extra for ES256 support
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn[standard]>=0.38.0",
    "yt-dlp>=2024.12.13",
]
